--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.5",
+    "@astrojs/partytown": "^2.0.4",
     "@fontsource-variable/urbanist": "^5.0.19",
     "astro": "^4.4.4",
     "normalize.css": "^8.0.1",
