--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "sass": "^1.69.7",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
